--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,8 @@
   --border-color: #e2e8f0;
   --border-focus-color: #cbd5e0;
   --brand-color: #3182ce;
-  --shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1) . 0 4px 6px -2px
-    rgba(0, 0, 0, 0.05);
+  --shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
   --default-space: 2rem;
   --default-radius: 0.25rem;
   --bg-highlight: #f7fafc;
@@ -65,6 +65,10 @@ button {
   color: red;
 }
 
+.loading {
+  color: #38a169;
+}
+
 .field-label {
   display: block;
   margin: 0 0 0.5rem;
@@ -105,7 +109,7 @@ button {
   padding: 1rem;
 }
 
-.task-list-item:nth-child(0dd) {
+.task-list-item:nth-child(odd) {
   background: var(--bg-highlight);
 }
 
@@ -187,4 +191,5 @@ button {
   border-radius: var(--default-radius);
   color: white;
   padding: 0.75rem 1.5rem;
+  margin-top: 20px;
 }
